@@ -3,6 +3,7 @@ Changelog for pdoTools.
 1.9.5 pl
 ==============
 - Added ability to return JSON or serialized string from pdoFetch::run().
+- [#60] [pdoMenu] Fixed parameter &tplCategoryFolder.
 - [#57] [pdoMenu] Improved placeholder [[+children]].
 - [#57] [pdoMenu] Added parameter &countChildren.
 
